# surepy

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: publish-to-pypi.yml  release-drafter.yml
docs/: conf.py  index.rst
surepy/: __init__.py  cli.py  client.py  const.py  devices.py  entities.py  enums.py  exceptions.py  flap.py  pet.py
surepy/devices/: __init__.py  hub.py
surepy/entities/: __init__.py  devices.py  pet.py  states.py
surepy/surecli/: __init__.py
